--- a/src/modelGeneric.mustache
+++ b/src/modelGeneric.mustache
@@ -3,7 +3,7 @@
  * {{{description}}}
  */
 {{/description}}
-export interface {{classname}} {{#parent}}extends {{{parent}}} {{/parent}}{
+export interface {{classname}} {{#vars}}{{#parent}}extends {{{parent}}} {{/parent}}{{/vars}}{
 {{#additionalPropertiesType}}
     [key: string]: {{{additionalPropertiesType}}}{{#hasVars}} | any{{/hasVars}};
 
